--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   "description": "",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "shurjopay": "^0.12.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
@@ -32,6 +37,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
